[userpages Canvas/Edit] Fix so offscreen cables still render after scroll.

--- a/userpages/src/components/CanvasPage/Edit/Canvas/index.pcss
+++ b/userpages/src/components/CanvasPage/Edit/Canvas/index.pcss
@@ -17,11 +17,17 @@
     position: absolute;
     top: 0;
     left: 0;
+    bottom: 0;
+    right: 0;
 }
 
 .Cables {
     z-index: 0;
     fill: none;
+}
+
+svg.Cables {
+    overflow: visible;
 }
 
 .Connection {
